[gd_scene load_steps=11 format=2]

[ext_resource path="res://HUD.gd" type="Script" id=1]
[ext_resource path="res://assets/light.png" type="Texture" id=2]
[ext_resource path="res://assets/Roboto-Medium.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://assets/move-icon.png" type="Texture" id=4]
[ext_resource path="res://assets/magic-icon.png" type="Texture" id=5]
[ext_resource path="res://assets/sword-icon.png" type="Texture" id=6]
[ext_resource path="res://assets/shield-icon.png" type="Texture" id=7]

[sub_resource type="DynamicFont" id=1]

size = 30
use_mipmaps = false
use_filter = false
font_data = ExtResource( 3 )
_sections_unfolded = [ "Font", "Settings" ]

[sub_resource type="RectangleShape2D" id=2]

custom_solver_bias = 0.0
extents = Vector2( 10, 10 )

[sub_resource type="DynamicFont" id=3]

size = 40
use_mipmaps = false
use_filter = false
font_data = ExtResource( 3 )
_sections_unfolded = [ "Font", "Resource", "Settings" ]

[node name="HUD" type="CanvasLayer" index="0"]

layer = 1
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )
transform = Transform2D( 1, 0, 0, 1, 0, 0 )
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="." index="0"]

position = Vector2( 518.786, 302.452 )
scale = Vector2( 2.10203, 0.956808 )
texture = ExtResource( 2 )
_sections_unfolded = [ "Transform", "Visibility" ]

[node name="Name" type="TextEdit" parent="." index="1"]

modulate = Color( 1, 1, 1, 0.705882 )
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 293.0
margin_bottom = 87.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
text = ""
readonly = false
highlight_current_line = false
syntax_highlighting = false
show_line_numbers = false
highlight_all_occurrences = false
override_selected_font_color = false
context_menu_enabled = true
smooth_scrolling = false
v_scroll_speed = 80.0
hiding_enabled = 0
wrap_lines = false
caret_block_mode = false
caret_blink = false
caret_blink_speed = 0.65
caret_moving_by_right_click = true
_sections_unfolded = [ "Visibility" ]

[node name="NameLabel" type="Label" parent="." index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 100.0
margin_right = 236.0
margin_bottom = 169.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 1 )
text = "Chat"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Rect", "Theme", "custom_fonts" ]

[node name="NameButton" type="Button" parent="." index="3"]

modulate = Color( 1, 1, 1, 0.588235 )
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 290.0
margin_right = 559.0
margin_bottom = 70.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Submit"
flat = false
align = 1
_sections_unfolded = [ "Anchor", "Grow Direction", "Margin", "Rect", "Visibility" ]

[node name="UpButton" type="Button" parent="." index="4"]

modulate = Color( 1, 1, 1, 0.784314 )
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -49.0
margin_top = -178.0
margin_right = 35.0
margin_bottom = -109.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "move"
flat = false
align = 1
_sections_unfolded = [ "Visibility" ]

[node name="TouchScreenButton" type="TouchScreenButton" parent="UpButton" index="0"]

position = Vector2( 39.1418, 32.5076 )
scale = Vector2( 4, 4 )
normal = null
pressed = null
bitmask = null
shape = SubResource( 2 )
shape_centered = true
shape_visible = true
passby_press = false
action = "ui_up"
visibility_mode = 0
_sections_unfolded = [ "Transform" ]

[node name="Sprite" type="Sprite" parent="UpButton" index="1"]

position = Vector2( 40, 25 )
texture = ExtResource( 4 )
_sections_unfolded = [ "Transform" ]

[node name="LeftButton" type="Button" parent="." index="5"]

modulate = Color( 1, 1, 1, 0.784314 )
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -157.0
margin_top = -103.0
margin_right = -73.0
margin_bottom = -34.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "magic"
flat = false
align = 1
_sections_unfolded = [ "Visibility" ]

[node name="TouchScreenButton2" type="TouchScreenButton" parent="LeftButton" index="0"]

position = Vector2( 40, 30 )
scale = Vector2( 4, 4 )
normal = null
pressed = null
bitmask = null
shape = SubResource( 2 )
shape_centered = true
shape_visible = true
passby_press = false
action = "ui_left"
visibility_mode = 0
_sections_unfolded = [ "Transform" ]

[node name="Sprite" type="Sprite" parent="LeftButton" index="1"]

position = Vector2( 45, 40 )
texture = ExtResource( 5 )
_sections_unfolded = [ "Transform", "Visibility" ]

[node name="RightButton" type="Button" parent="." index="6"]

modulate = Color( 1, 1, 1, 0.784314 )
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = 61.0
margin_top = -102.0
margin_right = 145.0
margin_bottom = -33.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "attack"
flat = false
align = 1
_sections_unfolded = [ "Visibility" ]

[node name="TouchScreenButton3" type="TouchScreenButton" parent="RightButton" index="0"]

position = Vector2( 40, 30 )
scale = Vector2( 4, 4 )
normal = null
pressed = null
bitmask = null
shape = SubResource( 2 )
shape_centered = true
shape_visible = true
passby_press = false
action = "ui_right"
visibility_mode = 0
_sections_unfolded = [ "Transform" ]

[node name="Sprite" type="Sprite" parent="RightButton" index="1"]

position = Vector2( 40, 40 )
texture = ExtResource( 6 )
_sections_unfolded = [ "Transform" ]

[node name="SelectButton" type="Button" parent="." index="7"]

modulate = Color( 1, 1, 1, 0.588235 )
anchor_left = 0.0
anchor_top = 1.0
anchor_right = 0.0
anchor_bottom = 1.0
margin_left = 100.0
margin_top = -69.0
margin_right = 184.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Select"
flat = false
align = 1
_sections_unfolded = [ "Anchor", "Margin", "Rect", "Visibility" ]

[node name="TouchScreenButton3" type="TouchScreenButton" parent="SelectButton" index="0"]

position = Vector2( 40, 30 )
scale = Vector2( 4, 4 )
normal = null
pressed = null
bitmask = null
shape = SubResource( 2 )
shape_centered = true
shape_visible = true
passby_press = false
action = "ui_select"
visibility_mode = 0
_sections_unfolded = [ "Transform" ]

[node name="StartButton" type="Button" parent="." index="8"]

modulate = Color( 1, 1, 1, 0.588235 )
anchor_left = 0.0
anchor_top = 1.0
anchor_right = 0.0
anchor_bottom = 1.0
margin_top = -69.0
margin_right = 84.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Start/Chat"
flat = false
align = 1
_sections_unfolded = [ "Anchor", "Visibility" ]

[node name="TouchScreenButton3" type="TouchScreenButton" parent="StartButton" index="0"]

position = Vector2( 40, 30 )
scale = Vector2( 4, 4 )
normal = null
pressed = null
bitmask = null
shape = SubResource( 2 )
shape_centered = true
shape_visible = true
passby_press = false
action = "ui_accept"
visibility_mode = 0
_sections_unfolded = [ "Transform" ]

[node name="DownButton" type="Button" parent="." index="9"]

modulate = Color( 1, 1, 1, 0.784314 )
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -48.0
margin_top = -80.0
margin_right = 36.0
margin_bottom = -11.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "shield"
flat = false
align = 1
_sections_unfolded = [ "Visibility" ]

[node name="TouchScreenButton4" type="TouchScreenButton" parent="DownButton" index="0"]

position = Vector2( 40, 30 )
scale = Vector2( 4, 4 )
normal = null
pressed = null
bitmask = null
shape = SubResource( 2 )
shape_centered = true
shape_visible = true
passby_press = false
action = "ui_down"
visibility_mode = 0
_sections_unfolded = [ "Transform" ]

[node name="Sprite" type="Sprite" parent="DownButton" index="1"]

position = Vector2( 40, 25 )
texture = ExtResource( 7 )
_sections_unfolded = [ "Transform" ]

[node name="Feedback" type="Label" parent="." index="10"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 699.0
margin_top = 403.0
margin_right = 1011.0
margin_bottom = 511.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Feedback2" type="Label" parent="." index="11"]

anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -69.0
margin_top = -219.0
margin_right = 162.0
margin_bottom = -197.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Margin", "Size Flags", "Visibility", "custom_styles" ]

[node name="Seconds" type="Label" parent="." index="12"]

anchor_left = 1.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 0.0
margin_left = -354.0
margin_bottom = 55.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 3 )
text = "0"
align = 2
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Size Flags", "Theme", "Visibility", "custom_colors", "custom_fonts", "custom_styles" ]

[connection signal="button_down" from="NameButton" to="." method="_on_Button_button_down"]

[connection signal="button_down" from="UpButton" to="." method="_on_UpButton_button_down"]

[connection signal="button_down" from="LeftButton" to="." method="_on_LeftButton_button_down"]

[connection signal="button_down" from="RightButton" to="." method="_on_RightButton_button_down"]

[connection signal="button_down" from="SelectButton" to="." method="_on_RightButton_button_down"]

[connection signal="button_down" from="SelectButton" to="." method="_on_SelectButton_button_down"]

[connection signal="button_down" from="StartButton" to="." method="_on_RightButton_button_down"]

[connection signal="button_down" from="StartButton" to="." method="_on_SelectButton_button_down"]

[connection signal="button_down" from="DownButton" to="." method="_on_DownButton_button_down"]


